third_party/move/move-compiler-v2/tests/reference-safety/duplicate_use.exp

Diagnostics:
error: cannot transfer mutable local `x` since it is borrowed
  ┌─ tests/reference-safety/duplicate_use.move:8:9
  │
8 │         mut_ref(x, x)
  │         ^^^^^^^^^^^^^
  │         │       │
  │         │       previously mutably borrowed here
  │         transfer attempted here
